--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
+    "start:dev": "cross-env NODE_PATH=. NODE_ENV=development && ts-node-dev -r tsconfig-paths/register src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,16 +13,26 @@
   "dependencies": {
     "awilix": "^4.3.1",
     "awilix-express": "^3.0.0",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "reflect-metadata": "^0.1.13",
     "remove": "^0.1.5",
-    "ts-node": "^9.1.1",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.19"
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.19",
+    "ts-node-dev": "^1.1.1",
+    "@types/body-parser": "^1.19.0",
+    "@types/multer": "^1.4.5"
   }
 }
